--- a/project/templates/checkout.html
+++ b/project/templates/checkout.html
@@ -167,7 +167,7 @@
             <button type="button" class="btn btn-primary btn-block" id="place-order-btn">Complete Purchase</button>
         </form>
     </div>
-    6 z</div>
+    </div>
     </div>
 </div>
 </div>
