--- a/project/templates/orders.html
+++ b/project/templates/orders.html
@@ -20,17 +20,17 @@
 <!-- Navigation bar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-      <a class="navbar-brand" href="#">Your Profile</a>
+      <a class="navbar-brand" href="#">Your Orders</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'user_profile' %}">Profile <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url 'user_profile' %}">Profile </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'orders'%}">Orders</a>
+            <a class="nav-link" href="{% url 'orders'%}">Orders <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'wallet' %}">Wallet</a>
