--- a/project/templates/main_base.html
+++ b/project/templates/main_base.html
@@ -105,7 +105,7 @@
 
 											{% else %}
 												<!-- If the user is not authenticated, show the login icon -->
-												<a class="login" href="{% url 'user_login' %}">LOGIN</a> 
+												<a class="login" href="{% url 'user_login' %}">LOGIN to purchase</a> 
 											{% endif %}
 											{% comment %} <a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a> {% endcomment %}
 										</div>
